--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+html {
+  margin: 25px;
+}
+
 button {
   padding: 0;
   margin: 2px;
@@ -16,4 +20,12 @@ h1 {
   background-color: #29a745;
   color: #e6ecff;
   height: 5vw;
+}
+
+.userGiphy {
+  margin-left: 10px;
+}
+
+#topics-input {
+  margin-left: 30px;
 }
