--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,11 @@
 html {
   margin: 25px;
+  min-height: 100%;
+  background-color: #e6ecff;
+}
+
+body {
+  background-color: #e6ecff;
 }
 
 button {
