--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,24 @@ p {
   color: #e6ecff;
 }
 
+.gifsRating {
+  margin-bottom: 4px;
+  color: hsl(240, 3%, 6%);
+  text-align: center; */
+}
+
+.giphyArea {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
+  justify-content: space-around;
+}
+
+img > p {
+  margin-bottom: 4px;
+  color: hsl(240, 3%, 6%);
+}
+
 h1 {
   margin-top: -30px;
 }
@@ -38,4 +56,8 @@ h1 {
 
 .btn-topics-input {
   margin-top: 8px;
+}
+
+img {
+  margin: 10px;
 }
