add titles to giphy area

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,8 @@ p {
   color: #e6ecff;
 }
 
-.gifsRating {
+.gifsRating,
+.gifsTitle {
   margin-bottom: 4px;
   color: hsl(240, 3%, 6%);
   text-align: center;
